# trade_analysis

./: .gitignore  HANDOFF.md  IBKR_PAPER_RUNBOOK.md  IBKR_SCOPE.md  README.md  SETUP.md  costs.py  data.py  engine.py  eurusd_daily.csv  metrics.py  pyproject.toml  requirements.txt  run.bat  run_dashboard_live.ps1  run_demo.py  run_noise_test.py  run_study.py  strategies.py  walkforward.py
analyst/: .env.example  README.md  __init__.py  features.py  graph.py  llm.py  news.py  nodes.py  run.py  state.py  usage_log.py
artifacts/: README.md
dashboard/: README.md  __init__.py  ab_breadth.py  ab_fx_validate.py  ab_meanrev.py  ab_overext.py  ab_regime.py  app.py  backtest.py  board_scan.py  broker.py  confidence_model.json  confidence_model.py  contracts.py  dashboard.db  executor.py  ib_client.py  ib_exec.py  instruments.py  journal.py  link_monitor.py  log.py  mt5_client.py  net.py  news_sources.py  optimize.py  paper.py  providers.py  replay.py  replay_cache.json  replay_data_5y.pkl  replay_data_5y_wide.pkl  report.py  retrospective.py  scoring.py  service.py  store.py  test_contracts.py  wide_search.py  win_model.json  (+2 more)
dashboard/core/: dashboard.db  journal.py  log.py  net.py  notable_events.py  notify.py  paper.py  reconcile.py  resilient_loop.py  scoring.py  sleeve.py  store.py
dashboard/data/: contracts.py  ib_client.py  mt5_client.py  providers.py
dashboard/execution/: broker.py  executor.py  ib_exec.py  link_monitor.py
dashboard/models/: confidence_model.py  win_model.py
dashboard/research/: ab_breadth.py  ab_fx_validate.py  ab_meanrev.py  ab_overext.py  ab_regime.py  backtest.py  bootstrap_ci.py  core_ops_test.py  core_sleeve_correlation.py  corr_penalty_test.py  cost_sensitivity_test.py  data_quality_audit.py  dipbuy_blend.py  dipbuy_refine.py  dipbuy_refine2.py  dipbuy_refine3.py  dipbuy_sizing.py  dividend_tax_drag.py  earnings_vol_crush_test.py  liquidity_check.py  live_vs_backtest.py  llm_gate_audit.py  optimize.py  pairs_test.py  param_sensitivity.py  preflight_check.py  prop_passprob.py  refined_statarb_test.py  replay.py  sector_mr_test.py  short_vol_test.py  sleeve_blend.py  sleeve_clustering_check.py  sleeve_staged_ramp.py  spy_dipbuy_test.py  spy_signal_test.py  stress_test.py  structure.py  walk_forward.py  wide_search.py
dashboard/tests/: test_analyst_llm.py  test_board_scan.py  test_broker.py  test_contracts.py  test_evaluate_signal.py  (+10 more)
(+5 files in other folders)
