[project]
name = "quant-trade-analysis"
version = "0.1.0"
description = "Backtester + multi-agent analyst + real-time NiceGUI dashboard for Gold/Oil/FX"
requires-python = ">=3.11"
dependencies = [
    # backtesting framework
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    # multi-agent analyst
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    # TLS (AVG HTTPS interception on this machine -> verify via OS trust store)
    "truststore>=0.10",
    "certifi",
    "httpx>=0.27",
    # dashboard
    "nicegui>=2.0",
    # data + news
    "yfinance>=0.2.40",
    "feedparser>=6.0",
    # brokers (first-class so `uv run` never tries to REMOVE them -- removing the
    # locked MetaTrader5 .pyd fails while the live app holds it, which used to force
    # `uv run --no-sync`). ib_async = IBKR futures (paper exec); MetaTrader5 = MT5.
    "ib_async>=1.0",
    "MetaTrader5; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Kept as aliases for back-compat with older docs (`uv sync --extra ib/mt5`);
# both are now first-class deps above, so these are effectively no-ops.
mt5 = ["MetaTrader5; sys_platform == 'win32'"]
ib = ["ib_async>=1.0"]

[tool.uv]
# Flat collection of scripts/packages, not an installable distribution.
package = false
